Normal movement of birds in an year

--- a/python/geoSpatial.ipynb
+++ b/python/geoSpatial.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "yearly_centroids = clf.calcCentroidPerYear(month_migration)"
+    "yearly_centroids = clf.calcCentroidPerMonthYear(month_migration)"
    ]
   },
   {
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf.plotCentroids(world_shape, yearly_centroids)"
+    "clf.plotYearlyCentroids(world_shape, yearly_centroids)"
    ]
   },
   {
