Migration data analysis cleanup

--- a/decadesAnalysis/trend_analysis.ipynb
+++ b/decadesAnalysis/trend_analysis.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
     }
    ],
    "source": [
-    "path = \"./NABBP_2023_grp_02.csv\"\n",
+    "path = \"../datasets/migration/NABBP_2023_grp_02.csv\"\n",
     "df = bird_data_read(path)"
    ]
   },
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
     }
    ],
    "source": [
-    "path = \"./NABBP_2023_grp_48.csv\"\n",
+    "path = \"../datasets/migration/NABBP_2023_grp_48.csv\"\n",
     "df = bird_data_read(path)"
    ]
   },
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
     }
    ],
    "source": [
-    "path = \"./NABBP_2023_grp_08.csv\"\n",
+    "path = \"../datasets/migration/NABBP_2023_grp_08.csv\"\n",
     "df = bird_data_read(path)"
    ]
   },
@@ -757,12 +757,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def tem_vs_location(monthly_avg_temp, df):\n",
-    "    bird_csv_path = './NABBP_2023_grp_02.csv'\n",
+    "    bird_csv_path = '../datasets/migration/NABBP_2023_grp_02.csv'\n",
     "    cols = ['EVENT_YEAR', 'EVENT_MONTH', 'ISO_COUNTRY', 'ISO_SUBDIVISION','LAT_DD','LON_DD']\n",
     "\n",
     "    bird_df = pd.read_csv(bird_csv_path, usecols = cols)\n",
@@ -837,12 +837,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def preci_vs_location(df, monthly_avg_precip):\n",
-    "    bird_csv_path = './NABBP_2023_grp_02.csv'\n",
+    "    bird_csv_path = '../datasets/migration/NABBP_2023_grp_02.csv'\n",
     "    cols = ['EVENT_YEAR', 'EVENT_MONTH', 'ISO_COUNTRY', 'ISO_SUBDIVISION','LAT_DD','LON_DD']\n",
     "\n",
     "    bird_df = pd.read_csv(bird_csv_path, usecols = cols)\n",
