File rearrangement and datasets

--- a/migrationAnalysis/delayAnalysis.ipynb
+++ b/migrationAnalysis/delayAnalysis.ipynb
@@ -17,18 +17,18 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import linregress\n",
-    "import climateFunctions as clf\n",
+    "import migrationFunctions as clf\n",
     "import importlib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "importlib.reload(clf)\n",
-    "migration_dataset = \"../datasets/migration/NABBP_2023_grp_03.csv\"\n",
+    "migration_dataset = \"../datasets/migration/NABBP_2023_grp_03.zip\"\n",
     "world_shape = \"../datasets/geodata/110m_cultural.zip\"\n",
     "species_id = [1723]\n",
     "tracking_month = 9\n",
@@ -46,27 +46,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ashwi\\AppData\\Local\\Temp\\ipykernel_1656\\632645862.py:2: DtypeWarning: Columns (27) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\ashwi\\AppData\\Local\\Temp\\ipykernel_1756\\632645862.py:2: DtypeWarning: Columns (27) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(migration_dataset)\n",
-      "c:\\Users\\ashwi\\Desktop\\Ashwin\\UCSD\\Quarters\\FA24\\ECE143\\project\\ECE143_cliMATE\\migrationAnalysis\\climateFunctions.py:171: SettingWithCopyWarning: \n",
+      "c:\\Users\\ashwi\\Desktop\\Ashwin\\UCSD\\Quarters\\FA24\\ECE143\\project\\ECE143_cliMATE\\migrationAnalysis\\migrationFunctions.py:173: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  species_data['EVENT_DATE'] = pd.to_datetime(species_data['EVENT_DATE'], format='mixed', errors='coerce')\n",
-      "c:\\Users\\ashwi\\Desktop\\Ashwin\\UCSD\\Quarters\\FA24\\ECE143\\project\\ECE143_cliMATE\\migrationAnalysis\\climateFunctions.py:172: SettingWithCopyWarning: \n",
+      "c:\\Users\\ashwi\\Desktop\\Ashwin\\UCSD\\Quarters\\FA24\\ECE143\\project\\ECE143_cliMATE\\migrationAnalysis\\migrationFunctions.py:174: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  species_data['DAY_OF_YEAR'] = species_data['EVENT_DATE'].dt.dayofyear\n",
-      "c:\\Users\\ashwi\\Desktop\\Ashwin\\UCSD\\Quarters\\FA24\\ECE143\\project\\ECE143_cliMATE\\migrationAnalysis\\climateFunctions.py:173: SettingWithCopyWarning: \n",
+      "c:\\Users\\ashwi\\Desktop\\Ashwin\\UCSD\\Quarters\\FA24\\ECE143\\project\\ECE143_cliMATE\\migrationAnalysis\\migrationFunctions.py:175: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  species_data['LAT_BAND'] = pd.cut(species_data['LAT_DD'], bins=latitudes, labels=latitudes[:-1])\n",
-      "c:\\Users\\ashwi\\Desktop\\Ashwin\\UCSD\\Quarters\\FA24\\ECE143\\project\\ECE143_cliMATE\\migrationAnalysis\\climateFunctions.py:182: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "c:\\Users\\ashwi\\Desktop\\Ashwin\\UCSD\\Quarters\\FA24\\ECE143\\project\\ECE143_cliMATE\\migrationAnalysis\\migrationFunctions.py:184: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  species_data.groupby(['EVENT_YEAR', 'LAT_BAND'])\n"
      ]
     },
