--- a/migrationAnalysis/geoSpatial.ipynb
+++ b/migrationAnalysis/geoSpatial.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import climateFunctions as clf\n",
+    "import migrationFunctions as clf\n",
     "import matplotlib.pyplot as plt\n",
     "import calendar\n",
     "import importlib"
@@ -27,7 +27,7 @@
    "outputs": [],
    "source": [
     "importlib.reload(clf)\n",
-    "migration_dataset = \"../datasets/migration/NABBP_2023_grp_03.csv\"\n",
+    "migration_dataset = \"../datasets/migration/NABBP_2023_grp_03.zip\"\n",
     "world_shape = \"../datasets/geodata/110m_cultural.zip\"\n",
     "species = 'Canada Goose'\n",
     "species_id = [1723]\n",
@@ -45,9 +45,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ashwi\\AppData\\Local\\Temp\\ipykernel_20432\\4257767073.py:1: DtypeWarning: Columns (27) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\ashwi\\AppData\\Local\\Temp\\ipykernel_2380\\4257767073.py:1: DtypeWarning: Columns (27) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(migration_dataset)\n",
-      "c:\\Users\\ashwi\\Desktop\\Ashwin\\UCSD\\Quarters\\FA24\\ECE143\\project\\ECE143_cliMATE\\migrationAnalysis\\climateFunctions.py:33: SettingWithCopyWarning: \n",
+      "c:\\Users\\ashwi\\Desktop\\Ashwin\\UCSD\\Quarters\\FA24\\ECE143\\project\\ECE143_cliMATE\\migrationAnalysis\\migrationFunctions.py:35: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -107,7 +107,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ashwi\\AppData\\Local\\Temp\\ipykernel_20432\\1719999317.py:8: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+      "C:\\Users\\ashwi\\AppData\\Local\\Temp\\ipykernel_2380\\1719999317.py:8: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
       "  plt.legend()\n"
      ]
     },
@@ -125,7 +125,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ashwi\\AppData\\Local\\Temp\\ipykernel_20432\\1719999317.py:18: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+      "C:\\Users\\ashwi\\AppData\\Local\\Temp\\ipykernel_2380\\1719999317.py:18: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
       "  plt.legend()\n"
      ]
     },
