--- a/migrationAnalysis/normalMigrationPath.ipynb
+++ b/migrationAnalysis/normalMigrationPath.ipynb
@@ -14,19 +14,19 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import climateFunctions as clf\n",
+    "import migrationFunctions as clf\n",
     "import matplotlib.pyplot as plt\n",
     "import importlib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "importlib.reload(clf)\n",
-    "migration_dataset = \"../datasets/migration/NABBP_2023_grp_03.csv\"\n",
+    "migration_dataset = \"../datasets/migration/NABBP_2023_grp_03.zip\"\n",
     "world_shape = \"../datasets/geodata/110m_cultural.zip\"\n",
     "species_id = [1723]\n",
     "species = 'Canada Goose'\n",
@@ -35,14 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ashwi\\AppData\\Local\\Temp\\ipykernel_15432\\1847292297.py:1: DtypeWarning: Columns (27) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\ashwi\\AppData\\Local\\Temp\\ipykernel_2136\\1847292297.py:1: DtypeWarning: Columns (27) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(migration_dataset)\n"
      ]
     }
@@ -53,14 +53,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ashwi\\AppData\\Local\\Temp\\ipykernel_15432\\2925151295.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\ashwi\\AppData\\Local\\Temp\\ipykernel_2136\\2925151295.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
