Add tests for migration analysis

--- a/test/test_delayAnalysis.ipynb
+++ b/test/test_delayAnalysis.ipynb
@@ -13,6 +13,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "func_folder = os.path.abspath(\"../migrationAnalysis\")\n",
+    "if func_folder not in sys.path:\n",
+    "    sys.path.append(func_folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -23,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,14 +53,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ashwi\\AppData\\Local\\Temp\\ipykernel_1756\\632645862.py:2: DtypeWarning: Columns (27) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\ashwi\\AppData\\Local\\Temp\\ipykernel_16992\\632645862.py:2: DtypeWarning: Columns (27) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(migration_dataset)\n",
       "c:\\Users\\ashwi\\Desktop\\Ashwin\\UCSD\\Quarters\\FA24\\ECE143\\project\\ECE143_cliMATE\\migrationAnalysis\\migrationFunctions.py:173: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
@@ -100,13 +114,6 @@
     "plt.grid()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
