--- a/test/test_geoSpatial.ipynb
+++ b/test/test_geoSpatial.ipynb
@@ -13,6 +13,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "func_folder = os.path.abspath(\"../migrationAnalysis\")\n",
+    "if func_folder not in sys.path:\n",
+    "    sys.path.append(func_folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "import migrationFunctions as clf\n",
     "import matplotlib.pyplot as plt\n",
@@ -22,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,14 +52,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ashwi\\AppData\\Local\\Temp\\ipykernel_2380\\4257767073.py:1: DtypeWarning: Columns (27) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\ashwi\\AppData\\Local\\Temp\\ipykernel_17504\\4257767073.py:1: DtypeWarning: Columns (27) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(migration_dataset)\n",
       "c:\\Users\\ashwi\\Desktop\\Ashwin\\UCSD\\Quarters\\FA24\\ECE143\\project\\ECE143_cliMATE\\migrationAnalysis\\migrationFunctions.py:35: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
@@ -63,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -100,14 +114,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ashwi\\AppData\\Local\\Temp\\ipykernel_2380\\1719999317.py:8: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+      "C:\\Users\\ashwi\\AppData\\Local\\Temp\\ipykernel_17504\\1719999317.py:8: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
       "  plt.legend()\n"
      ]
     },
@@ -125,7 +139,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ashwi\\AppData\\Local\\Temp\\ipykernel_2380\\1719999317.py:18: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+      "C:\\Users\\ashwi\\AppData\\Local\\Temp\\ipykernel_17504\\1719999317.py:18: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
       "  plt.legend()\n"
      ]
     },
