--- a/test/test_normalMigrationPath.ipynb
+++ b/test/test_normalMigrationPath.ipynb
@@ -13,6 +13,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "func_folder = os.path.abspath(\"../migrationAnalysis\")\n",
+    "if func_folder not in sys.path:\n",
+    "    sys.path.append(func_folder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "import migrationFunctions as clf\n",
     "import matplotlib.pyplot as plt\n",
@@ -21,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,14 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ashwi\\AppData\\Local\\Temp\\ipykernel_2136\\1847292297.py:1: DtypeWarning: Columns (27) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\ashwi\\AppData\\Local\\Temp\\ipykernel_13880\\1847292297.py:1: DtypeWarning: Columns (27) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(migration_dataset)\n"
      ]
     }
@@ -53,14 +67,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ashwi\\AppData\\Local\\Temp\\ipykernel_2136\\2925151295.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\ashwi\\AppData\\Local\\Temp\\ipykernel_13880\\2925151295.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
